# gold-ecosystems-linkml

./: .gitignore  Makefile  README.md  pyproject.toml
gold_ecosystems_linkml/: cli.py  linkml.py
tests/: test_cli.py  test_linkml.py
