[tool.poetry]
name = "gold-ecosystems-linkml"
version = "0.1.0"
description = ""
authors = ["Patrick Kalita <pkalita@lbl.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
click = "^8.1.2"
openpyxl = "^3.0.9"
linkml-runtime = "^1.2.7"
linkml = "^1.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-linkml = 'gold_ecosystems_linkml.cli:generate_linkml'
